Fix alignment of sidebar links

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,9 +27,37 @@ body {
   color: darkmagenta;
 }
 
+.container {
+  display: flex;
+  align-items: stretch;
+  flex: 1;
+}
+
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  margin-bottom: 16px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #fff;
+}
+
+.card-items {
+  display: flex;
 }
 
 .card {
